--- a/css.css
+++ b/css.css
@@ -1,10 +1,10 @@
 h1{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 2vw;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 span{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 200 px;   
+    font-size: 2rem;   
 }
